[metadata]
name = nfelib
version = 1.1
description = nfelib: electronic invoicing library for Brazil
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akretion/nfelib
author = Raphaël Valyi
author_email = "raphael.valyi@akretion.com.br"
license = MIT
license_file = MIT-LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Code Generators
    Topic :: Text Processing :: Markup :: XML
keywords = e-invoicing,NFe,ERP,Odoo
project_urls =
    Source=https://github.com/akretion/nfelib

[options]
packages = nfelib, schemas, tests
python_requires = >=3.6
include_package_data = True

[options.extras_require]
test =
    codecov
    xmldiff
    pytest
    pytest-cov
    tox

[flake8]
exclude = tests/*
max-line-length = 88
ignore = W503,ANN101,ANN102,E203

[doc8]
max-line-length = 88

[tool:pytest]
addopts = --color=yes
